--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,10 @@
 .container {
 	text-align: center;
+	position: absolute;
+	top: 50%;
+	left:  50%;
+	transform: translate(-50% , -50%);
+	margin: auto;
 }
 
 #start , .restart {
